--- a/src/features/card-list/ui/styles.scss
+++ b/src/features/card-list/ui/styles.scss
@@ -1,21 +1,7 @@
-.card-list {
+.customer-credits {
   display: flex;
   flex-direction: column;
   gap: 24px;
-
-  &__filters {
-    display: flex;
-    justify-content: space-between;
-    gap: 16px;
-
-    > div:last-child {
-      justify-content: flex-end;
-    }
-    @media screen and (max-width: 800px) {
-      flex-direction: column;
-      gap: 16px;
-    }
-  }
 
   &__list {
     display: flex;
