--- a/src/entities/credits/credit-card/styles.scss
+++ b/src/entities/credits/credit-card/styles.scss
@@ -56,13 +56,25 @@
         justify-content: space-between;
         gap: 24px;
 
+        @media screen and (max-width: 1200px) {
+            width: 100%;
+        }
+
         &__first-row {
             display: flex;
             gap: 20px;
 
-            > div {
-                width: 220px;
-                max-width: 100%;
+            @media screen and (min-width: 1200px) {
+                > div {
+                    width: 220px;
+                    max-width: 100%;
+                }
+            }
+
+            @media screen and (min-width: 550px) and (max-width: 1200px)  {
+                > div {
+                    flex: 1 1 50%;
+                }
             }
 
             @media screen and (max-width: 550px) {
@@ -77,9 +89,21 @@
             display: flex;
             gap: 20px;
 
+            @media screen and (min-width: 1200px) {
+                > div {
+                    width: 220px;
+                }
+            }
+
+            @media screen and (min-width: 550px) and (max-width: 1200px)  {
+                > div {
+                    flex: 1 1 50%;
+                }
+            }
+
             @media screen and (max-width: 550px) {
                 flex-wrap: wrap;
-                > button {
+                > div {
                     width: 100%;
                 }
             }
