--- a/src/pages/credit/ui/credit-info/styles.scss
+++ b/src/pages/credit/ui/credit-info/styles.scss
@@ -71,7 +71,7 @@
                 gap: 10px;
                 padding: 16px;
                 border-radius: var(--large-border-radius);
-                background: #e6e6e6;
+                background: var(--bg-tertiary-card);
             }
             &__second {
                 display: flex;
