--- a/src/shared/ui/card/styles.scss
+++ b/src/shared/ui/card/styles.scss
@@ -46,6 +46,9 @@
   &.secondary {
     background-color: var(--bg-secondary-card);
   }
+  &.tertiary {
+    background-color: var(--bg-tertiary-card);
+  }
 
   &.extra-small-gap {
     gap: 8px;
