--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -86,6 +86,11 @@ body {
   border-radius: 5px;
 }
 
+.form-container-group {
+  display: flex;
+  gap: 10px;
+}
+
 #root{
   padding: 0;
   margin: 0;
